icons_16 = [
  'nm-device-wired.png',
  'nm-no-connection.png',
  'nm-vpn-standalone-lock.png',
]

icons_22 = [
  'nm-adhoc.png',
  'nm-device-wired-secure.png',
  'nm-device-wired.png',
  'nm-device-wwan.png',
  'nm-insecure-warn.png',
  'nm-mb-roam.png',
  'nm-no-connection.png',
  'nm-secure-lock.png',
  'nm-signal-00-secure.png',
  'nm-signal-00.png',
  'nm-signal-100-secure.png',
  'nm-signal-100.png',
  'nm-signal-25-secure.png',
  'nm-signal-25.png',
  'nm-signal-50-secure.png',
  'nm-signal-50.png',
  'nm-signal-75-secure.png',
  'nm-signal-75.png',
  'nm-stage01-connecting01.png',
  'nm-stage01-connecting02.png',
  'nm-stage01-connecting03.png',
  'nm-stage01-connecting04.png',
  'nm-stage01-connecting05.png',
  'nm-stage01-connecting06.png',
  'nm-stage01-connecting07.png',
  'nm-stage01-connecting08.png',
  'nm-stage01-connecting09.png',
  'nm-stage01-connecting10.png',
  'nm-stage01-connecting11.png',
  'nm-stage02-connecting01.png',
  'nm-stage02-connecting02.png',
  'nm-stage02-connecting03.png',
  'nm-stage02-connecting04.png',
  'nm-stage02-connecting05.png',
  'nm-stage02-connecting06.png',
  'nm-stage02-connecting07.png',
  'nm-stage02-connecting08.png',
  'nm-stage02-connecting09.png',
  'nm-stage02-connecting10.png',
  'nm-stage02-connecting11.png',
  'nm-stage03-connecting01.png',
  'nm-stage03-connecting02.png',
  'nm-stage03-connecting03.png',
  'nm-stage03-connecting04.png',
  'nm-stage03-connecting05.png',
  'nm-stage03-connecting06.png',
  'nm-stage03-connecting07.png',
  'nm-stage03-connecting08.png',
  'nm-stage03-connecting09.png',
  'nm-stage03-connecting10.png',
  'nm-stage03-connecting11.png',
  'nm-tech-3g.png',
  'nm-tech-cdma-1x.png',
  'nm-tech-edge.png',
  'nm-tech-evdo.png',
  'nm-tech-gprs.png',
  'nm-tech-hspa.png',
  'nm-tech-lte.png',
  'nm-tech-umts.png',
  'nm-vpn-active-lock.png',
  'nm-vpn-connecting01.png',
  'nm-vpn-connecting02.png',
  'nm-vpn-connecting03.png',
  'nm-vpn-connecting04.png',
  'nm-vpn-connecting05.png',
  'nm-vpn-connecting06.png',
  'nm-vpn-connecting07.png',
  'nm-vpn-connecting08.png',
  'nm-vpn-connecting09.png',
  'nm-vpn-connecting10.png',
  'nm-vpn-connecting11.png',
  'nm-vpn-connecting12.png',
  'nm-vpn-connecting13.png',
  'nm-vpn-connecting14.png',
  'nm-wwan-tower.png',
]

icons_32 = [
  'nm-device-wired.png',
  'nm-no-connection.png',
]

icons_48 = [
  'nm-device-wireless.png',
]

icons_scalable = [
  'nm-device-wired-secure-symbolic.svg',
  'nm-device-wired-symbolic.svg',
  'nm-device-wired.svg',
  'nm-device-wwan-symbolic.svg',
  'nm-no-connection-symbolic.svg',
  'nm-no-connection.svg',
  'nm-signal-00-secure-symbolic.svg',
  'nm-signal-00-symbolic.svg',
  'nm-signal-100-secure-symbolic.svg',
  'nm-signal-100-symbolic.svg',
  'nm-signal-25-secure-symbolic.svg',
  'nm-signal-25-symbolic.svg',
  'nm-signal-50-secure-symbolic.svg',
  'nm-signal-50-symbolic.svg',
  'nm-signal-75-secure-symbolic.svg',
  'nm-signal-75-symbolic.svg',
  'nm-vpn-active-lock-symbolic.svg',
  'nm-vpn-connecting01-symbolic.svg',
  'nm-vpn-connecting02-symbolic.svg',
  'nm-vpn-connecting03-symbolic.svg',
  'nm-vpn-connecting04-symbolic.svg',
  'nm-vpn-connecting05-symbolic.svg',
  'nm-vpn-connecting06-symbolic.svg',
  'nm-vpn-connecting07-symbolic.svg',
  'nm-vpn-connecting08-symbolic.svg',
  'nm-vpn-connecting09-symbolic.svg',
  'nm-vpn-connecting10-symbolic.svg',
  'nm-vpn-connecting11-symbolic.svg',
  'nm-vpn-connecting12-symbolic.svg',
  'nm-vpn-connecting13-symbolic.svg',
  'nm-vpn-connecting14-symbolic.svg',
  'nm-vpn-standalone-lock-symbolic.svg',
]

icons = [
  # local dir, install dir, files
  ['16', '16x16', icons_16],
  ['22', '22x22', icons_22],
  ['32', '32x32', icons_32],
  ['48', '48x48', icons_48],
  ['scalable', 'scalable', icons_scalable],
]

foreach icon: icons
  icon_dir = join_paths(nma_datadir, 'icons', 'hicolor', icon[1], 'apps')
  foreach name: icon[2]
    install_data(
      join_paths(icon[0], name),
      install_dir: icon_dir
    )
  endforeach
endforeach
